# saclebot_git

./: entrypoint.sh
competition_world/: CMakeLists.txt  package.xml
competition_world/config/: urdf_params.yaml
competition_world/launch/: a.launch  paper_cup.launch  world.launch  world.launch~
competition_world/models/: model.config  model.config~  washroom_iisc_competition.sdf  washroom_iisc_competition.sdf~
competition_world/models/materials/scripts/: floor_exterior.material~  iisc_robotic_challenge_material.material  iisc_robotic_challenge_material.material~
competition_world/models/meshes/: WashRoomDustBin.dae  WashRoomMirror.dae  WashRoomWalls.dae  WashRoomWalls_Ver_1_0.dae  WashRoom_1.dae  WashRoom_iisc_robotics_challenge.dae  commode.dae  floor_iisc_exterior.dae  floor_iisc_exterior.dae~  floor_iisc_exteriorVer_1_0.dae  floor_iisc_interior.dae  green_paper_cup.dae  red_paper_cup.dae  robot_dust_bin.dae  tap.dae  untitled.dae  washRoomDoor.dae  washRoomWalls.stl  washRoomWindow.dae  wash_base_sink.dae  washroom_walls.dae
competition_world/src/: InertiaCalculator.py  urdf_spawner.py  urdf_srvr_client.py
competition_world/urdf/: coke_can.urdf  green_paper_cup.urdf  red_paper_cup.urdf
competition_world/world/: washroom_iisc_robotics_challenge.world  washroom_iisc_robotics_challenge.world~
gripper_description/: package.xml
gripper_description/config/: gripper.rviz  gripper_controller.yaml  joint_names_gripper_description.yaml
gripper_description/launch/: display.launch  display.launch~  gazebo.launch  gazebo.launch~  gripper_gazebo.launch  gripper_gazebo.launch~  spawn_urdf.launch
gripper_description/meshes/: rocker_left_link.STL
gripper_description/urdf/: gripper_description.csv  gripper_description.urdf
saclebot_bringup/: CMakeLists.txt  package.xml
saclebot_bringup/config/: Relocate_GUI.perspective  saclebot.rviz
saclebot_bringup/include/saclebot_bringup/: robot_force_based_move.h
saclebot_bringup/launch/: rqt_gui_saclebot.launch  saclebot_bringup.launch
saclebot_bringup/src/: laser_reader.py  linear_reg.py  robot_force_based_move.cpp  saclebot_home_state.py  test.py
saclebot_description/: CMakeLists.txt  package.xml
saclebot_description/config/: a.txt  joint_names_saclebot_description.yaml  pos_ctrlr.yaml  saclebot.rviz
saclebot_description/launch/: display.launch  gazebo.launch  saclebot_gazebo.launch
saclebot_description/meshes/: R1_link.STL  R1_link.dae  R2_link.STL  R2_link.dae  R3_link.STL  R3_link.dae  RP_LiDAR_A3M1_link.STL  RP_LiDAR_A3M1_link.dae  base_manipulator.STL  camera_head_link.STL  crank_left_link.STL  crank_right_link.STL  gripper_base.STL  gripper_base_link.STL  left_actuator.STL  mop_link.STL  mop_link.dae  nxp_imu_link.STL  right_actuator.STL  rocker_right_link.STL  shoulder_link.STL  shoulder_link.dae
saclebot_description/src/: relocate_robot.py
saclebot_description/srv/: SacleBotState.srv
saclebot_description/urdf/: saclebot.gv  saclebot_description.csv  saclebot_description.urdf  saclebot_description_orgMass.urdf
saclebot_image_samples/: CMakeLists.txt  package.xml
saclebot_image_samples/src/: imageCaptureSrvr.py  image_capture.py  img.py
saclebot_image_samples/srv/: ImageCaptureMessage.srv  ImageCaptureSrvMessage.srv  ImageServiceMessage.srv  ImageSrvMessage.srv
saclebot_matlab/path_planning/: lidardata.mat  slamtest2.m
saclebot_matlab/trajectory_planning/: traj_planning.m
saclebot_navigation/: CMakeLists.txt  package.xml
saclebot_navigation/src/: saclebot_entry.py
saclebot_object_detection/: CMakeLists.txt  package.xml
saclebot_object_detection/src/: detection_funcs.py  iisc_com.py
